--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -856,7 +856,7 @@ As a result, in {productname} 6.4, visual characters no longer render inside `co
 
 In previous versions of {productname}, a bug was found that affected the `lists` and `advlist` plugins when the {productname} editor body was set to `contentEditable = 'false'`. The consequence meant that `lists` that were set as `contenteditable="false"` elements could be modified by using list API commands, toolbar buttons and menu items.
 
-The fix involved implementing a new process to  check the element conditions.  The check now looks to  identify if the `lists` or `advlists` in the DOM are set to be either `contentEditable = 'false'` or `contentEditable = 'true'.
+The fix involved implementing a new process to  check the element conditions.  The check now looks to identify if the *list* or *Advanced List* is a `contenteditable = "false"` element.
 
 As a result, in {productname} 6.4, *list* or *Advanced List*  plugins that are set as `contenteditable = "false"` elements can no longer be modified by using list API commands, toolbar buttons and menu items.
 
