--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -992,7 +992,7 @@ Consequently, in {productname} 6.4, using the forwarddelete or delete keys on `c
 
 In the previous versions of {productname}, when utilizing the backspace or delete keys, they would delete the contents inside `contenteditable="false"` elements.
 
-As a consequence, elements nested within a `contenteditable="false"` root element set to `contentEditable= false;`, were able to be removed/deleted from the `contenteditable="false"` root element. To fix this issue, {productname} 6.4 introduced various improvements to block all commands and keyboard functions such as `delete/backspace` from being applied to `contenteditable="false"` content. 
+As a consequence, elements nested within a `contenteditable="false"` root element set to `contenteditable= false;`, were able to be removed/deleted from the `contenteditable="false"` root element. To fix this issue, {productname} 6.4 introduced various improvements to block all commands and keyboard functions such as `delete/backspace` from being applied to `contenteditable="false"` content. 
 
 The changes made to {productname} 6.4 included updates to the editor selection `isEditable` function, which now prioritizes fake selections first.
 
