--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -571,7 +571,7 @@ It is important to note that disabling sanitization introduces potential securit
 
 In previous versions of {productname}, the top right close 'x' button within the modal dialogs were not keyboard-navigable by the Tab key.
 
-With the release of {productname} 6.4, various changes have now made it possible for modal dialogues to be navigated with the Tab key. This is accomplished by adding a `Tabbing.config` to the close 'x' button. The `Tabbing.config` is an object that describes the sequence of focusable elements, their `tabindex` and the `initial focus` within the dialog when it is opened. In addition an optional `firstTabstop` property has also been added to the `Tabbing.config` to specify which element receives focus first when the dialog is opened.
+With the latest release of {productname} 6.4, users can now navigate through all dialogs that have a `x` close button. With these updates, users can now use the `Tab` key to move through the elements within the modal dialogue, making it more accessible and user-friendly. 
 
 This update enables users to more easily and quickly access the modal dialogues within {productname}.
 
