--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -744,7 +744,7 @@ In {productname} 6.4, this issue has be rectified, which now ensures that the fo
 
 In previous versions of {productname} up until the changes and improvements made with the release of v6.4, the foreground and background menu icons would not properly update to display the last used color, as outlined in the above.
 
-To facilitate this change, {productname} has added a new `setIconFill` function to the `NestedMenuItemInstanceAPI`, which allows users to set the fill color of an icon when the user selects an option from the format menu. This ensures that the menu icon changes to accurately reflect the user's selection.
+To facilitate this change, {productname} has added a new `setIconFill` function to the `editor.ui.addNestedMenuItem`, which allows users to set the fill color of an icon when the user selects an option from the format menu. This ensures that the menu icon changes to accurately reflect the user's selection.
 
 In {productname} 6.4, this new function allows the foreground and background menu icons to function as expected.
 
