--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -406,7 +406,7 @@ As a result, any `editor.selection` elements that return a `true` value when a s
 === New `editor.dom.isEditable` and `editor.selection.isEditable` APIs that returns whether the specified node is editable
 //#TINY-9462
 
-In previous versions of {productname}, elements within the editor.dom could be _modified_ regardless if they were assigned to be `contentEditable = true;` or `contentEditable = false;`.
+In previous versions of {productname}, elements within a `contentEditable ="false"` root could be unexpectedly modified by the `editor.insertContent` API and the `mceInsertContent` command..
 
 As a consequence all elements within the root `body` set to `contentEditable = false;` value, were affected by the issue.
 
