--- a/modules/ROOT/pages/6.4-release-notes.adoc
+++ b/modules/ROOT/pages/6.4-release-notes.adoc
@@ -63,7 +63,7 @@ As demonstrated in the example above, an unintentional or redundant space was in
 
 In {productname} version 6.4, the Smart Typography plugin no longer creates a space between a comma and a closing double-quote mark.
 
-=== Added common/space/delBetweenExclamationMarks to remove spaces between exclamation marks
+=== Added functionality to remove spaces between exclamation marks
 //#TINY-9398		
 
 An issue was discovered that affected the typography plugin in previous versions of {productname} when inserting content into the editor. Specifically, the issue involved exclamation marks and the spaces between them, such as in the example `“Hello! !“`. This issue prevented the editor from removing the spaces between the double *exclamation marks* `! !` after executing the typography plugin toolbar or menubar button.
